--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
   <base href="/">
-  <link rel="stylesheet" href="styles.css">
-  <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
-  <script src="node_modules/systemjs/dist/system.src.js"></script>
-  <script src="node_modules/rxjs/bundles/Rx.js"></script>
-  <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
-  <script src="node_modules/angular2/bundles/router.dev.js"></script>
+  <link rel="stylesheet" href="app/style/styles.css">
+  <script src="https://github.jspm.io/jmcriffey/bower-traceur-runtime@0.0.87/traceur-runtime.js"></script>
+  <script src="lib/angular2-polyfills.js"></script>
+  <script src="lib/system.src.js"></script>
+  <script src="lib/Rx.js"></script>
+  <script src="lib/angular2.dev.js"></script>
+  <script src="lib/router.dev.js"></script>
   <script>
       System.config({packages: {app: {format: 'register',defaultExtension: 'js'}}});
       System.import('app/boot')
